opam-version: "2.0"
name: "nsq"
version: "0.6.0"
maintainer: "Ryan Slade <ryanslade@gmail.com>"
authors: "Ryan Slade <ryanslade@gmail.com>"
homepage: "https://github.com/ryanslade/nsq-ocaml"
bug-reports: "https://github.com/ryanslade/nsq-ocaml/issues"
dev-repo: "git+https://github.com/ryanslade/nsq-ocaml.git"
build: [["dune" "build" "-p" name "-j" jobs]]
synopsis: "A client library for the NSQ messaging platform"
depends: [
  "ocaml" {>= "5.4.1"}
  "dune" {>= "3.0"}
  "base"
  "core"
  "eio" {>= "1.0"}
  "eio_main" {>= "1.0"}
  "cohttp"
  "cohttp-eio"
  "yojson"
  "ppx_deriving_yojson"
  "ppx_jane"
  "logs"
  "fmt"
  "hex"
  "alcotest" {with-test}
]
